--- a/style.css
+++ b/style.css
@@ -176,3 +176,24 @@ cursor: pointer;
 
 
 }
+
+.warning {
+    background: var(--color-danger);
+    color: var(--always-white);
+    padding: 1.2rem;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 1.2rem;
+    margin-top: 2.4rem;
+
+    opacity: 1;
+    transform: translate(0);
+    transition: opacity .4s ease, transform .4s ease;
+
+div{
+    display: flex;
+    align-items: center;
+    gap: .8rem;
+}
+
+}
