--- a/style.css
+++ b/style.css
@@ -196,4 +196,13 @@ div{
     gap: .8rem;
 }
 
+i{
+    font-size: 2rem;
+}
+
+button{
+    border: none;
+    background: none;
+    color: var(--always-white);
+}
 }
